<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginEnd="10dp"
      android:layout_marginStart="10dp"
      android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register For New Account"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="#0a0a85"
        android:layout_marginBottom="10dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please fill all the fields."
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:inputType="text"
        android:textSize="20sp"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"/>
    <!--       android:drawableLeft="@drawable/ic_baseline_lock_24"-->
    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginEnd="5dp"
        android:layout_margin="10dp"
        android:inputType="text"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:hint="email"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:layout_margin="10dp"
        android:drawablePadding="10dp"/>
    <!--        -->
    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_margin="10dp"
        android:hint="Confirm Password"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        />
    <!--        android:drawableLeft="@drawable/ic_baseline_lock_24"-->
  </LinearLayout>

  <Button
      android:id="@+id/btnRegister"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Register"
      android:background="#023e8a"
      android:textSize="20sp"
      android:layout_margin="10dp"
      android:textColor="#fff"/>
</LinearLayout>
